update alts and images for slider

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <p>Наша косметологічна клініка пропонує вам професійні послуги з догляду за шкірою обличчя та тіла. </p>
       <p>B beauty zone ми гарантуємо найвищі стандарти якості та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати свою красу та молодість. 
       З нами краса назавжди!</p>
-      <img src="./img/about/1.jpg" alt="">
-      <img src="./img/about/star-1.svg" alt="">
-      <img src="./img/about/2.jpg" alt="">
-      <img src="./img/about/star-2.svg" alt="">
+      <img src="./img/about/1.jpg" alt="Про нас">
+      <img src="./img/about/star-1.svg" alt="Про нас">
+      <img src="./img/about/2.jpg" alt="Про нас">
+      <img src="./img/about/star-2.svg" alt="Про нас">
     </section>
     <section id="why-we">
       <h2 class="section-title">Чому люди <span class="accent">обирають нас</span></h2>
@@ -55,15 +55,15 @@
       <h2 class="section-title">Наші <span class="accent">процедури</span></h2>
       <ul class="procedures-list">
         <li class="procedures-item">
-          <img src="./img/procedures/procedure-1.jpg" alt="">  
+          <img src="./img/procedures/procedure-1.jpg" alt="Маски для обличчя">  
           <p>Маски для обличчя</p>
         </li>
         <li class="procedures-item">
-          <img src="./img/procedures/procedure-1.jpg" alt=""> 
+          <img src="./img/procedures/procedure-2.jpg" alt="Ін'єкції для обличчя"> 
           <p>Ін'єкції для обличчя</p>
         </li>
         <li class="procedures-item">
-          <img src="./img/procedures/procedure-1.jpg" alt=""> 
+          <img src="./img/procedures/procedure-3.jpg" alt="Очищення обличчя"> 
           <p>Очищення обличчя</p>
         </li>
       </ul>
